corpus/function_declaration.txt
==============================
Anonymous
==============================

local foo = function()
end

---

(program
  (var_declaration (identifier) (functiondef)))

==============================
Named
==============================

local function foo()

end

---

(program
  (function_statement (function_name)))

==============================
A function that actually does something
==============================

local function bar()
   local x = 3
   local y = {
      z = function()
         local x = 1
      end,
      w = function()
      end,
   }
end

---

(program
  (function_statement (function_name)
    (var_declaration (identifier) (number))
    (var_declaration (identifier) (table_constructor
      table_key: (identifier) (functiondef
        (var_declaration (identifier) (number)))
      table_key: (identifier) (functiondef)))))


==============================
A function that returns
==============================

local function bar()
   local x = "hello"
   return x
end

---

(program
  (function_statement (function_name)
    (var_declaration (identifier) (string))
    (retstat (identifier))))


==============================
A function with args
==============================

local function foo(bar, baz)
   return bar, baz
end

---

(program 
  (function_statement (function_name)
    (arg_name) (arg_name)
    (retstat (identifier) (identifier))))

==============================
A function with typed args
==============================

local function foo(bar: string, baz: number)
   return bar, baz
end

---

(program 
  (function_statement (function_name)
    (arg_name) (simple_type)
    (arg_name) (simple_type)
    (retstat (identifier) (identifier))))
