corpus/function_types.txt
==============================
No args, no returns
==============================

local foo: function()

---

(program 
  (var_declaration (var) (type_annotation (function_type))))

==============================
One arg, no returns
==============================

local foo: function(string)

---

(program 
  (var_declaration (var)
    (type_annotation (function_type
       arg_type: (simple_type)))))

==============================
No args, one return
==============================

local foo: function(): string

---

(program 
  (var_declaration (var)
    (type_annotation (function_type
      ret_type: (simple_type)))))

==============================
One arg, one return
==============================

local foo: function(number): string

---

(program 
  (var_declaration (var)
    (type_annotation (function_type
      arg_type: (simple_type)
      ret_type: (simple_type)))))

==============================
Multiple args, no return
==============================

local foo: function(number, {string}, string)

---

(program 
  (var_declaration (var)
    (type_annotation (function_type
      arg_type: (simple_type)
      arg_type: (table_type
        value_type: (simple_type))
      arg_type: (simple_type)))))

==============================
No args, multiple returns
==============================

local foo: function(): string, {number}, number, thread

---

(program 
  (var_declaration (var)
    (type_annotation (function_type
      ret_type: (simple_type)
      ret_type: (table_type
        value_type: (simple_type))
      ret_type: (simple_type)
      ret_type: (simple_type)))))

==============================
Multiple args, multiple returns
==============================

local foo: function(number, {string}, string): string, {number}, number, thread

---

(program 
  (var_declaration (var)
    (type_annotation (function_type
      arg_type: (simple_type)
      arg_type: (table_type
        value_type: (simple_type))
      arg_type: (simple_type)
      ret_type: (simple_type)
      ret_type: (table_type
        value_type: (simple_type))
      ret_type: (simple_type)
      ret_type: (simple_type)))))
