corpus/numbers.txt
==============================
Floats
==============================

local x = 4.63

---

(program
  (var_declaration (var (identifier)) (number)))

==============================
Hex number
==============================

local x = 0xf22

---

(program
  (var_declaration (var (identifier)) (number)))

==============================
Hex float
==============================

local x = 0xf22.fffeec1

---

(program
  (var_declaration (var (identifier)) (number)))

==============================
Exponent
==============================

local x = 3e2

---

(program
  (var_declaration (var (identifier)) (number)))

==============================
Hex Exponent
==============================

local x = 0xfp10

---

(program
  (var_declaration (var (identifier)) (number)))
