corpus/simple_types.txt

==============================
Local declaration
==============================

local x: number

---

(program
  (var_declaration (var (identifier)) (type_annotation (simple_type))))

==============================
Local declaration with initialization
==============================

local x: number = 5

---

(program
  (var_declaration (var (identifier)) (type_annotation (simple_type)) (number)))

==============================
Local declaration of multiple variables
==============================

local x, y: number, string

---

(program
  (var_declaration (var (identifier)) (var (identifier)) (type_annotation (simple_type) (simple_type))))

==============================
Local declaration of multiple variables with initialization
==============================

local x, y: number, string = 23, "hi"

---

(program
  (var_declaration (var (identifier)) (var (identifier)) (type_annotation (simple_type) (simple_type)) (number) (string)))

==============================
Union
==============================

local x: string | number

---

(program
  (var_declaration (var (identifier)) (type_annotation (simple_type) (simple_type))))

==============================
Array type
==============================

local x: {string}

---

(program
  (var_declaration (var (identifier)) (type_annotation (table_type value_type: (simple_type)))))

==============================
Array type with initialization
==============================

local x: {string} = {}

---

(program
  (var_declaration (var (identifier)) (type_annotation
    (table_type value_type: (simple_type)))
    (table_constructor)))

==============================
Map type
==============================

local x: {string:number}

---

(program
  (var_declaration (var (identifier)) (type_annotation (table_type (simple_type) (simple_type)))))

==============================
Map type with initialization
==============================

local x: {string:number} = {}

---

(program
  (var_declaration (var (identifier)) (type_annotation (table_type (simple_type) (simple_type)))
    (table_constructor)))

==============================
Union of array and non-array type
==============================

local x: thread | {string:number} = {}

---

(program
  (var_declaration (var (identifier)) (type_annotation
    (simple_type)
    (table_type
      key_type: (simple_type)
      value_type: (simple_type)))
        (table_constructor)))
