corpus/variable_assignment.txt
==============================
Local Variable Declaration
==============================

local x = 5

---

(program
  (var_declaration (var (identifier)) (number)))

==============================
Global Variable Declaration
==============================

global x = 5

---

(program
  (var_declaration (var (identifier)) (number)))


==============================
Local Variable List Declaration
==============================

local x, y, z = 1, 2, 3

---

(program
  (var_declaration 
    (var (identifier)) (var (identifier)) (var (identifier))
    (number) (number) (number)))

==============================
Global Variable List Declaration
==============================

global x, y, z = 1, 2, "hey"

---

(program
  (var_declaration 
    (var (identifier)) (var (identifier)) (var (identifier))
    (number) (number) (string)))


==============================
Variable reassignment
==============================

local x = "hey"
x = "hi"

---

(program
  (var_declaration (var (identifier)) (string))
  (var_assignment (var (identifier)) (string)))

==============================
Table entry reassignment
==============================

foo.bar = "hi"

---

(program
  (var_assignment (var (identifier) (identifier)) (string)))
