corpus/variable_declaration.txt

==============================
Local <const> Variable Declaration
==============================

local x <const> = 5

---

(program
  (var_declaration (var (identifier) (attribute)) (number)))

==============================
Global <const> Variable Declaration
==============================

local x <const> = 5

---

(program
  (var_declaration (var (identifier) (attribute)) (number)))

==============================
Local <const> Variable List Declaration
==============================

local x <const>, y <const>, z <const> = 1, 2, 3

---

(program
  (var_declaration 
    (var (identifier) (attribute)) (var (identifier) (attribute)) (var (identifier) (attribute))
    (number) (number) (number)))

==============================
Global <const> Variable List Declaration
==============================

global x <const>, y <const>, z <const> = 1, 2, "hey"

---

(program
  (var_declaration 
    (var (identifier) (attribute)) (var (identifier) (attribute)) (var (identifier) (attribute))
    (number) (number) (string)))

